fixed profile buttons alignment

--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@ top: 2px;
     height: 16px;
     text-align: center;
     position: relative;
-    bottom: 200px;
+    bottom: 240px;
 }
 
 #profile-container {
